# alice_satellite

./: .gitignore  LICENSE  README.md  setup.cfg
Docker/: Dockerfile  demo.sh  requirements.txt  vimrc  zshrc
Docker/tflite/: labels.txt  model_summary.txt  stream.tflite
alice_satellite/: __init__.py  __main__.py  audiohandler.py  config.py  generate.py  mqtthandler.py  utils.py  version.py
alice_satellite/kws_streaming/layers/: stream.py
alice_satellite/model/: __init__.py  kws.py  kwslite.py
tflite/: digest  labels.txt  model_summary.txt  stream.tflite
utils/: tsv_sort.py
