[metadata]
name = alice_satellite
version = attr: alice_satellite.version.version
description = Python module for Rhasspy Satellite with Wake Word Detection 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/UmbrellaCodr/alice_satellite
author = UmbrellaCodr, alice development team
author_email = umbrella@biohazard.cc
license = MIT
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
project_urls =
    Download = https://github.com/UmbrellaCodr/alice_satellite/releases
    Source = https://github.com/UmbrellaCodr/alice_satellite
    Tracker = https://github.com/UmbrellaCodr/alice_satellite/issues
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Speech
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    librosa >= 0.9.2
    noisereduce >= 2.0.1
    numpy >= 1.23.5
    readchar >= 4.0.3
    scipy >= 1.9.3
    sounddevice >= 0.4.5
    soundfile >= 0.11.0
    tflite-runtime >= 2.11.0
    termcolor >= 2.1.1
    importlib-resources >= 5.10.2
    pyyaml >= 6.0
    asyncio_mqtt >= 0.16.1
    dataclasses_json >= 0.5.7

python_requires = >=3.9
zip_safe = False

[options.package_data]
alice_satellite =
    wav/*